--- a/garyo_tensei.tex
+++ b/garyo_tensei.tex
@@ -250,6 +250,7 @@ Tobari wo someyuku shiro
 
 Sai no kanata ni oshiyoseru Inori wo komeru shirahama
 Takeru shishio yami ni naide Kakugo wa hitotsu to
+(Toki wo ageyo) %http://koti.mbnet.fi/goutetsu/show_lyrics.php?artist=onmyoza&title=yoshitsuneakkihougan
 \hfill
 
 Garandou no seigi to konoyo no subete wo
